<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fidelityViewModels"
            type="com.app.rifluxyssofficetask.FidelityViewModels" />

        <variable
            name="officeDetailsAdapter"
            type="com.app.rifluxyssofficetask.OfficeDetailsListAdapter" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FidelityNationalActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/header_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    app:layout_constraintBaseline_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/back_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_10"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back_icon"
                            android:onClick="@{() -> fidelityViewModels.oncloseClicked()}"
                            android:contentDescription="@string/todo" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_4"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.45"
                        app:layout_constraintStart_toEndOf="@+id/back_icon"
                        app:layout_constraintTop_toTopOf="@id/back_icon">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fidelity_national_title"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/line_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_1"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@color/line"
                    app:layout_constraintTop_toBottomOf="@id/header_layout" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/offices_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/text_background"
                    android:padding="@dimen/margin_10"
                    app:layout_constraintTop_toBottomOf="@+id/line_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/offices"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/map_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.3"
                    app:layout_constraintTop_toBottomOf="@+id/offices_layout">

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:context=".FidelityNationalActivity" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintHeight_percent="1"
                    app:layout_constraintTop_toBottomOf="@id/map_fragment">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/office_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adapter="@{officeDetailsAdapter}"
                        android:orientation="vertical"
                        android:scrollbars="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>