<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>
        <variable
            name="officeDetailsData"
            type="com.app.rifluxyssofficetask.OfficeDetailsPojo" />

        <variable
            name="fullOfficeDetailsData"
            type="com.app.rifluxyssofficetask.ShowOfficeDetailsData" />

        <variable
            name="officeAdapterViewModels"
            type="com.app.rifluxyssofficetask.OfficeDetailsListAdapter.OfficeAdapterViewModels" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/margin_10"
            android:onClick="@{() -> officeAdapterViewModels.onShowFullDetails()}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_10"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{officeDetailsData.officeName}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_10"
                android:padding="@dimen/margin_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_down_arrow"
                    android:visibility="@{!fullOfficeDetailsData.stateChecked ? View.VISIBLE : View.GONE }"
                    android:contentDescription="@string/todo"
                    android:padding="@dimen/margin_8"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_up_arrow"
                    android:visibility="@{fullOfficeDetailsData.stateChecked ? View.VISIBLE : View.GONE }"
                    android:contentDescription="@string/todo"
                    android:padding="@dimen/margin_8"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/line_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/line"
            app:layout_constraintTop_toBottomOf="@id/header" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f4f4f4"
            app:layout_constraintTop_toBottomOf="@+id/header"
            android:visibility="@{fullOfficeDetailsData.showOfficeData ? View.VISIBLE : View.GONE}">

            <LinearLayout
                android:id="@+id/directions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="@{() -> officeAdapterViewModels.onDirectionMap()}">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:layout_weight="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/directions"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:layout_marginEnd="@dimen/margin_15"
                    android:layout_weight="1"
                    app:layout_constraintStart_toEndOf="@id/directions_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:text="@{officeDetailsData.officeAddress1  + officeDetailsData.officeAddress2}"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/directions_layout" />


            <LinearLayout
                android:id="@+id/call_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@+id/directions_layout"
                android:onClick="@{() -> officeAdapterViewModels.onCall()}">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:layout_weight="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/call"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:layout_marginEnd="@dimen/margin_15"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    app:layout_constraintStart_toEndOf="@id/directions_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:text="@{officeDetailsData.officePhone}"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/call_layout" />


            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10"
                android:onClick="@{() -> officeAdapterViewModels.onComposeEmail()}"
                app:layout_constraintTop_toBottomOf="@+id/call_layout">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:layout_weight="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:layout_marginEnd="@dimen/margin_15"
                    android:layout_weight="1"
                    app:layout_constraintStart_toEndOf="@id/directions_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:text="@{officeDetailsData.officeEmail}"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/email_layout" />


            <LinearLayout
                android:id="@+id/website_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@+id/email_layout"
                android:onClick="@{() -> officeAdapterViewModels.onCallWebsite()}">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:layout_weight="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:layout_marginEnd="@dimen/margin_15"
                    android:layout_weight="1"
                    app:layout_constraintStart_toEndOf="@id/directions_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:text="@{officeDetailsData.officeWebsite}"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/website_layout" />


            <LinearLayout
                android:id="@+id/facebook_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@+id/website_layout"
                android:onClick="@{() -> officeAdapterViewModels.onCallFacebook()}">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:layout_weight="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook"

                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:layout_marginEnd="@dimen/margin_15"
                    android:layout_weight="1"
                    app:layout_constraintStart_toEndOf="@id/directions_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:text="@{officeDetailsData.officeFacebook}"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/facebook_layout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>